WIP Initial set up of slice dimension different than z
It visually works, but still need to:
- check if metadata is correct
- improve code organization
- write tests
- check if performance can be improved (too many array conversions are being done)

--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
     "webpack": "^3.8.1"
   },
   "dependencies": {
+    "ndarray": "^1.0.18",
+    "ndarray-unpack": "^1.0.0",
     "nifti-reader-js": "^0.5.4"
   }
 }
