Major refactoring on code organization to enable/facilitate tests

--- a/package.json
+++ b/package.json
@@ -77,7 +77,9 @@
     "webpack": "^3.8.1"
   },
   "dependencies": {
+    "cwise": "^1.0.10",
     "ndarray": "^1.0.18",
+    "ndarray-ops": "^1.2.2",
     "ndarray-unpack": "^1.0.0",
     "nifti-reader-js": "^0.5.4"
   }
