Switches from phantomjs to headless chrome for tests
Reason: phantomjs would need polyfilling Object.assign, which is being used by the lib,
plus it has sort of been abandoned for updates

--- a/package.json
+++ b/package.json
@@ -36,12 +36,11 @@
     "webpack:watch": "webpack --progress --debug --watch  --config ./config/webpack",
     "watch": "npm run clean && shx mkdir dist && npm run webpack:watch",
     "start": "npm run webpack",
-    "test": "npm run test:phantom",
+    "test": "npm run test:chrome",
     "test:watch": "karma start config/karma/karma-watch.js",
-    "test:phantom": "karma start config/karma/karma-phantom.js",
     "test:chrome": "karma start config/karma/karma-chrome.js",
     "test:firefox": "karma start config/karma/karma-firefox.js",
-    "test:all": "npm run test:phantom && npm run test:chrome && npm run test:firefox"
+    "test:all": "npm run test:chrome && npm run test:firefox"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -64,13 +63,12 @@
     "karma-coverage": "^1.1.1",
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.4",
     "karma-webpack": "^2.0.6",
     "lodash": "^4.17.4",
     "mocha": "^4.0.1",
     "opn-cli": "^3.1.0",
-    "phantomjs": "^2.1.7",
     "promise-polyfill": "^6.1.0",
+    "puppeteer": "^1.0.0",
     "shx": "^0.2.2",
     "sinon": "^4.2.1",
     "uglify-js": "^3.2.0",
