--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
   },
   "dependencies": {
     "ndarray": "^1.0.18",
-    "nifti-reader-js": "^0.5.4"
+    "nifti-reader-js": "^0.5.4",
+    "pako": "^1.0.6",
+    "stream-http": "^2.8.1"
   }
 }
