--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "sinon": "^4.2.1",
     "uglify-js": "^3.2.0",
     "webpack": "^3.8.1",
+    "webpack-cli": "^3.1.2",
     "webpack-livereload-plugin": "^1.0.0"
   },
   "dependencies": {
