--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 node_modules/
 coverage/
 package-lock.json
+examples/data/603_1__ALPHA_Serie_a.nii.gz
+examples/data/603_1__ALPHA_Serie_a.nii
+package-lock.json
+package-lock.json
